[gd_scene load_steps=18 format=4 uid="uid://l7bnphtx3umy"]

[ext_resource type="Script" path="res://scenes/ui/options_menu/options_menu.gd" id="1_g2jmh"]
[ext_resource type="Texture2D" uid="uid://dd7topio112dj" path="res://assets/ui/ui-pixel.png" id="2_2yfnq"]
[ext_resource type="Theme" uid="uid://baxc7bnuvw1w1" path="res://scenes/ui/options_menu/options_menu_theme.tres" id="3_48ceu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g827g"]
texture = ExtResource("2_2yfnq")
separation = Vector2i(2, 2)
3:6/0 = 0
2:4/0 = 0
2:3/0 = 0
1:2/0 = 0
1:3/0 = 0
0:2/0 = 0
0:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_ujolc"]
sources/0 = SubResource("TileSetAtlasSource_g827g")

[sub_resource type="AtlasTexture" id="AtlasTexture_fppg7"]
atlas = ExtResource("2_2yfnq")
region = Rect2(54, 108, 16, 16)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pj7fg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qll5p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ibxyh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w76vs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2k8u0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ypuxq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v3tdo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0tv6c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_exywx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h3u3j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fou3q"]

[node name="OptionsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g2jmh")

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.27451, 0.27451, 0.27451, 0.427451)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAKAAYAAAABAAMAAAALAAYAAAABAAMAAAAMAAYAAAABAAMAAAANAAYAAAABAAMAAAAOAAYAAAABAAMAAAAPAAYAAAABAAMAAAAQAAYAAAABAAMAAAARAAYAAAABAAMAAAASAAYAAAABAAMAAAATAAYAAAABAAMAAAAUAAYAAAABAAMAAAAVAAYAAAACAAMAAAAJAAYAAAAAAAMAAAAJAAcAAAAAAAMAAAAJAAgAAAAAAAMAAAAJAAkAAAAAAAMAAAAJAAoAAAAAAAMAAAAJAAsAAAAAAAMAAAAJAAwAAAAAAAMAAAAJAA0AAAAAAAMAAAAVAAcAAAACAAMAAAAVAAgAAAACAAMAAAAVAAkAAAACAAMAAAAVAAoAAAACAAMAAAAVAAsAAAACAAMAAAAVAAwAAAACAAMAAAAVAA0AAAACAAMAAAAVAA4AAAABAAMAAAAUAA4AAAABAAMAAAATAA4AAAABAAMAAAASAA4AAAABAAMAAAARAA4AAAABAAMAAAAQAA4AAAABAAMAAAAPAA4AAAABAAMAAAAOAA4AAAABAAMAAAANAA4AAAABAAMAAAAMAA4AAAABAAMAAAALAA4AAAABAAMAAAAKAA4AAAABAAMAAAAJAA4AAAAAAAMAAAAKAAcAAAABAAMAAAAKAAgAAAABAAMAAAAKAAkAAAABAAMAAAAKAAoAAAABAAMAAAAKAAsAAAABAAMAAAAKAAwAAAABAAMAAAAKAA0AAAABAAMAAAALAAcAAAABAAMAAAALAAgAAAABAAMAAAALAAkAAAABAAMAAAALAAoAAAABAAMAAAALAAsAAAABAAMAAAALAAwAAAABAAMAAAALAA0AAAABAAMAAAAMAAcAAAABAAMAAAAMAAgAAAABAAMAAAAMAAkAAAABAAMAAAAMAAoAAAABAAMAAAAMAAsAAAABAAMAAAAMAAwAAAABAAMAAAAMAA0AAAABAAMAAAANAAcAAAABAAMAAAANAAgAAAABAAMAAAANAAkAAAABAAMAAAANAAoAAAABAAMAAAANAAsAAAABAAMAAAANAAwAAAABAAMAAAANAA0AAAABAAMAAAAOAAcAAAABAAMAAAAOAAgAAAABAAMAAAAOAAkAAAABAAMAAAAOAAoAAAABAAMAAAAOAAsAAAABAAMAAAAOAAwAAAABAAMAAAAOAA0AAAABAAMAAAAPAAcAAAABAAMAAAAPAAgAAAABAAMAAAAPAAkAAAABAAMAAAAPAAoAAAABAAMAAAAPAAsAAAABAAMAAAAPAAwAAAABAAMAAAAPAA0AAAABAAMAAAAQAAcAAAABAAMAAAAQAAgAAAABAAMAAAAQAAkAAAABAAMAAAAQAAoAAAABAAMAAAAQAAsAAAABAAMAAAAQAAwAAAABAAMAAAAQAA0AAAABAAMAAAARAAcAAAABAAMAAAARAAgAAAABAAMAAAARAAkAAAABAAMAAAARAAoAAAABAAMAAAARAAsAAAABAAMAAAARAAwAAAABAAMAAAARAA0AAAABAAMAAAASAAcAAAABAAMAAAASAAgAAAABAAMAAAASAAkAAAABAAMAAAASAAoAAAABAAMAAAASAAsAAAABAAMAAAASAAwAAAABAAMAAAASAA0AAAABAAMAAAATAAcAAAABAAMAAAATAAgAAAABAAMAAAATAAkAAAABAAMAAAATAAoAAAABAAMAAAATAAsAAAABAAMAAAATAAwAAAABAAMAAAATAA0AAAABAAMAAAAUAAcAAAABAAMAAAAUAAgAAAABAAMAAAAUAAkAAAABAAMAAAAUAAoAAAABAAMAAAAUAAsAAAABAAMAAAAUAAwAAAABAAMAAAAUAA0AAAABAAMAAAAJAAQAAAAAAAMAAAAJAAUAAAAAAAMAAAAKAAQAAAABAAMAAAAKAAUAAAABAAMAAAALAAQAAAABAAMAAAALAAUAAAABAAMAAAAMAAQAAAABAAMAAAAMAAUAAAABAAMAAAANAAQAAAABAAMAAAANAAUAAAABAAMAAAAOAAQAAAABAAMAAAAOAAUAAAABAAMAAAAPAAQAAAABAAMAAAAPAAUAAAABAAMAAAAQAAQAAAABAAMAAAAQAAUAAAABAAMAAAARAAQAAAABAAMAAAARAAUAAAABAAMAAAASAAQAAAABAAMAAAASAAUAAAABAAMAAAATAAQAAAABAAMAAAATAAUAAAABAAMAAAAUAAQAAAABAAMAAAAUAAUAAAABAAMAAAAVAAQAAAACAAMAAAAVAAUAAAACAAMAAAAVAAMAAAACAAMAAAAJAAMAAAAAAAMAAAAKAAMAAAABAAMAAAALAAMAAAABAAMAAAAMAAMAAAABAAMAAAANAAMAAAABAAMAAAAOAAMAAAABAAMAAAAPAAMAAAABAAMAAAAQAAMAAAABAAMAAAARAAMAAAABAAMAAAASAAMAAAABAAMAAAATAAMAAAABAAMAAAAUAAMAAAABAAMAAAAJAAIAAAAAAAMAAAAJAAEAAAAAAAIAAAAJAA8AAAAAAAMAAAAKAA8AAAABAAMAAAALAA8AAAABAAMAAAAMAA8AAAABAAMAAAANAA8AAAABAAMAAAAOAA8AAAABAAMAAAAPAA8AAAABAAMAAAAQAA8AAAABAAMAAAARAA8AAAABAAMAAAASAA8AAAABAAMAAAATAA8AAAABAAMAAAAUAA8AAAABAAMAAAAVAA8AAAABAAMAAAAKAAIAAAABAAMAAAALAAIAAAABAAMAAAAMAAIAAAABAAMAAAANAAIAAAABAAMAAAAOAAIAAAABAAMAAAAPAAIAAAABAAMAAAAQAAIAAAABAAMAAAARAAIAAAABAAMAAAASAAIAAAABAAMAAAATAAIAAAABAAMAAAAUAAIAAAABAAMAAAAVAAIAAAACAAMAAAAVAAEAAAACAAIAAAAUAAEAAAABAAIAAAATAAEAAAABAAIAAAASAAEAAAABAAIAAAARAAEAAAABAAIAAAALAAEAAAABAAIAAAAKAAEAAAABAAIAAAAMAAEAAAABAAIAAAANAAEAAAABAAIAAAAOAAEAAAABAAIAAAAPAAEAAAABAAIAAAAQAAEAAAABAAIAAAA=")
tile_set = SubResource("TileSet_ujolc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = -103.5
offset_right = 55.5
offset_bottom = 103.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("3_48ceu")

[node name="MusicVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MUSIC VOLUME"

[node name="MusicVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SFXVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SOUND EFFECTS"

[node name="SFXVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MuteLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MUTE"

[node name="MuteCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResolutionsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "RESOLUTION"

[node name="ResolutionsOptions" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScreenTypeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SCREEN TYPE"

[node name="ScreenTypeOptions" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ExitButton" type="Button" parent="."]
layout_mode = 2
offset_left = 340.0
offset_top = 11.0
offset_right = 356.0
offset_bottom = 27.0
theme_override_icons/icon = SubResource("AtlasTexture_fppg7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pj7fg")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_qll5p")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ibxyh")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_w76vs")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_2k8u0")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ypuxq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_v3tdo")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_0tv6c")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_exywx")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_h3u3j")
theme_override_styles/normal = SubResource("StyleBoxEmpty_fou3q")

[connection signal="value_changed" from="MarginContainer/VBoxContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/MuteCheckbox" to="." method="_on_mute_checkbox_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/ResolutionsOptions" to="." method="_on_resolutions_options_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/ScreenTypeOptions" to="." method="_on_screen_type_options_item_selected"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
